<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="next_bt">Next </string>
    <string name="prev_bt">Prev </string>
    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean?</string>
    <string name="question_mideast">The Suez canal connects the Red Sea and the Indian Ocean?</string>
    <string name="question_africa">The source of the Nile River is in Thailand?</string>
    <string name="question_america">The Amazon River is the longest river in America?</string>
    <string name="question_asia">Bangkok is the Capital city of Thailand?</string>
	<string name="cheat_button">Cheat!</string>
	<string name="warning_text">Are you sure?</string>
	<string name="show_answer_button">Show Answer now!!</string>
	<string name="judgment_toast">You just cheated!</string>    

</resources>
