<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" 
    android:orientation="vertical"
    >
    <TextView 
        android:id="@+id/questiont_tv"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="24dp"
		
		/>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/true_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            />
        <Button
            android:id="@+id/false_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/prev_bt"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_bt"
        android:drawableLeft="@drawable/arrow_left"
        android:drawablePadding="4dp"
        />
 
        
    <Button
        android:id="@+id/next_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_bt"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="4dp"
        />
    </LinearLayout>
       <Button
        android:id="@+id/cheat_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
